--- a/src/document.scss
+++ b/src/document.scss
@@ -62,7 +62,8 @@ a {
   // padding-right: 44px;
 }
 .doc-desc-2-highlight-text {
-  color: #ff4e00;
+  // color: #ff4e00;
+  color: $viz-purple
 }
 .doc-title-3 {
   /* Headlines: */
