--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -22,6 +22,7 @@
     right: 0;
     text-align: center;
     padding: 16px 0;
+    background-color: #ffffff;
     @media (min-width: 768px) {
       top: 0;
     }
