--- a/src/app/pages/components/components.component.scss
+++ b/src/app/pages/components/components.component.scss
@@ -3,6 +3,13 @@
   padding: 48px 9.3056vw 0 9.3056vw;
   box-sizing: border-box;
 
+  @media screen and (min-width: 1400px) {
+    width: 1170px;
+    padding: 48px 0 0 0;
+    margin: 0px auto;
+  }
+
+
   ::ng-deep {
     .mat-icon {
       color: #696969;
@@ -63,7 +70,7 @@
       cursor: pointer;
     }
     &-class {
-      width: calc((100% - 18.6111vw) / 3);
+      width: calc((100%) / 3);
     }
     &-class-wrapper {
       display: flex;
