--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -4,6 +4,7 @@
     height: calc(100vh - 72px - 72px);
     @media screen and (min-width: 1400px) {
       width: 1170px;
+      margin: 0 auto;
     }
     .home-sec-1 {
       display: flex;
