--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -3,6 +3,7 @@
     display: block;
     height: calc(100vh - 72px - 72px);
     margin: 0 9.375vw;
+    overflow: hidden;
     @media screen and (min-width: 1400px) {
       width: 1170px;
       margin: 0 auto;
