--- a/src/assets/documents/components/snackbar.html
+++ b/src/assets/documents/components/snackbar.html
@@ -32,9 +32,9 @@
   </div>
 
 
-  <div class="doc-example-container docs-mt32">
+  <!-- <div class="doc-example-container docs-mt32">
     <div app-docs-example="snackbar-mobile"></div>
-  </div>
+  </div> -->
 
   <div class="doc-divider">
   </div>
