--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -56,11 +56,11 @@
     <div class="doc-example-container">
       <div app-docs-example="slider-range"></div>
     </div>
-    <div class="doc-desc-2">
+    <!-- <div class="doc-desc-2">
       Range sliders can get range value from change event</div>
     <div class="doc-example-container">
       <div app-docs-example="slider-range-event"></div>
-    </div>
+    </div> -->
     <div class="doc-desc-2">
       Range slider can be locked up with icons on both ends of the bar that reflect a range of values.</div>
     <div class="doc-example-container">
