--- a/src/assets/documents/components/menu.html
+++ b/src/assets/documents/components/menu.html
@@ -24,6 +24,7 @@
   </div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
@@ -32,9 +33,13 @@
   <div class="doc-example-container">
     <div app-docs-example="menu-basic"></div>
   </div>
-  <div class="doc-example-container" style="margin-top:16px">
-    <div app-docs-example="menu-nested"></div>
+
+  <div class="" id="exampleWrapper">
+    <div class="doc-example-container" style="margin-top:16px">
+      <div app-docs-example="menu-nested"></div>
+    </div>
   </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
