Fix Bug : update Typograhpy scale.png (223,224)

--- a/src/assets/documents/components/typography.html
+++ b/src/assets/documents/components/typography.html
@@ -35,7 +35,7 @@
 
 
 
-  <img src="assets/img/typescale.svg" alt="" srcset="" height="1015" width="703">
+  <img src="assets/img/typography.png" alt="" srcset="" height="1015" width="703">
 
 
   <div class="doc-divider"></div>
