Fix Bug : remove import range slider module from developers documentation

--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -63,6 +63,7 @@
     Import the component modules.
   </div>
   <pre class="doc-code-sec">    <span class="hljs-keyword">import</span> { 
+    
       VizHeaderModule,
       VizDateRangePickerModule,
       VizSelectModule,
@@ -90,8 +91,7 @@
       VizBottomSheetModue,
       VizBreadcrumbModule,
       VizSearchModule,
-      VizChartModule,
-      VizRangeSliderModule
+      VizChartModule
     } <span class="hljs-keyword">from</span> <span class="hljs-string">&apos;viz-toolkit&apos;</span>;
     <span class="hljs-meta">@NgModule</span>({
       ...
@@ -123,8 +123,7 @@
         VizBottomSheetModue,
         VizBreadcrumbModule,
         VizSearchModule,
-        VizChartModule,
-        VizRangeSliderModule
+        VizChartModule
       ],
       ...
     })
