Fix Bug : Remove useless file.

--- a/src/assets/examples/snackbar-basic/snackbar-basic.component.html
+++ b/src/assets/examples/snackbar-basic/snackbar-basic.component.html
@@ -1,1 +1,1 @@
-<button mat-button (click)="openSnackBar(message.value, action.value)">Show PC snack-bar</button>
+<button mat-button (click)="openSnackBar()">Show PC snack-bar</button>
