--- a/src/assets/examples/snackbar-mobile/snackbar-mobile.component.html
+++ b/src/assets/examples/snackbar-mobile/snackbar-mobile.component.html
@@ -1,1 +1,1 @@
-<button mat-button (click)="openSnackBar(message.value, action.value)">Show MOBILE snack-bar</button>
+<button mat-button (click)="openSnackBar()">Show MOBILE snack-bar</button>
