Update repo link to vizient server

--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -21,10 +21,10 @@
     <span class="docs-markdown-h3" id="step1">
       <span header-link="step1"></span>Step 1: Install Vizient ToolKit</span>
   </div>
-  <div class="doc-desc-2">
-    Cause Vizient Toolkit is not published into npm. You have to install it via local file.
+  <div class="doc-code-sec">
+    npm install viz-toolkit --registry http://artifacts.corp.vizientinc.com/artifactory/api/npm/npm
   </div>
-  <div class="doc-bold-title">
+  <!-- <div class="doc-bold-title">
     Put libs/viz-toolkit in root folder. Add this line into your package.json.
   </div>
   <div class="doc-code-sec">
@@ -35,7 +35,7 @@
   </div>
   <div class="doc-code-sec">
     npm install
-  </div>
+  </div> -->
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
