Update vizient information

--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -21,20 +21,8 @@
     <span class="docs-markdown-h3" id="step1">
       <span header-link="step1"></span>Step 1: Install Vizient ToolKit</span>
   </div>
-  <div class="doc-desc-2">
-    Cause Vizient Toolkit is not published into npm. You have to install it via local file.
-  </div>
-  <div class="doc-bold-title">
-    Put libs/viz-toolkit in root folder. Add this line into your package.json.
-  </div>
   <div class="doc-code-sec">
-    &quot;viz-toolkit&quot;: &quot;file:./libs/viz-toolkit&quot;,
-  </div>
-  <div class="doc-bold-title">
-    Run npm/yarn install.
-  </div>
-  <div class="doc-code-sec">
-    npm install
+    npm install viz-toolkit --registry http://artifacts.corp.vizientinc.com/artifactory/api/npm/npm
   </div>
   <div class="doc-divider"></div>
 
