--- a/libs/components/feedback-indicator/viz-feedback-indicator.component.scss
+++ b/libs/components/feedback-indicator/viz-feedback-indicator.component.scss
@@ -1,4 +1,5 @@
 :host {
+  font-family: Soleto;
   .viz-feedback-indicator-wrap {
     position: relative;
     box-sizing: border-box;
@@ -15,6 +16,7 @@
       left: 16px;
     }
     .viz-feedback-indicator-message {
+      color: #000000;
       width: 100%;
       white-space: pre-line;
       text-align: left;
