--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -1,4 +1,5 @@
 :host {
+  font-family: Soleto;
   .footer-bar {
     background: #ffffff;
     border-top: 1px solid #e5e5e5;
@@ -22,6 +23,7 @@
     right: 0;
     text-align: center;
     padding: 16px 0;
+    color: #696969;
     background-color: #ffffff;
     @media (min-width: 768px) {
       top: 0;
