--- a/libs/components/login/viz-login.component.scss
+++ b/libs/components/login/viz-login.component.scss
@@ -1,14 +1,15 @@
 :host {
+  font-family: Soleto;
   .viz-login {
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     width: 448px;
     // height: 354px;
     box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.1);
     .wrapper {
       display: inline-flex;
       width: 360px;
-      justify-content: flex-start; 
+      justify-content: flex-start;
       align-items: center;
       flex-direction: column;
     }
@@ -32,6 +33,8 @@
       margin-top: 16px;
       display: block;
       margin-bottom: 32px;
+      text-align: center;
+      text-decoration: none;
     }
   }
 }
