--- a/libs/components/nodata/viz-nodata.component.scss
+++ b/libs/components/nodata/viz-nodata.component.scss
@@ -8,6 +8,7 @@
   //   left: 50%;
   //   transform: translate(-50%, -50%);
   // }
+  font-family: Soleto;
   .viz-nodata-wrap {
     height: 100%;
     width: 100%;
