--- a/libs/components/search/viz-search.component.scss
+++ b/libs/components/search/viz-search.component.scss
@@ -34,6 +34,7 @@
   //     }
   //   }
   // }
+  font-family: Soleto;
   ::ng-deep {
     .mat-form-field .mat-form-field-flex {
       align-items: baseline !important;
