Fix bug: fix sidenav position

--- a/src/app/pages/component-sidenav/component-sidenav.html
+++ b/src/app/pages/component-sidenav/component-sidenav.html
@@ -1,4 +1,4 @@
-<div class="documentation-nav">
+<div class="documentation-nav" [class.isScrollBottom]="isScrollBottom">
   <div class="nav-sec" *ngFor="let group of navList;">
     <p class="nav-title">{{group.name}}</p>
     <p 
