--- a/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/src/app/pages/component-sidenav/component-sidenav.scss
@@ -5,8 +5,8 @@
   .documentation-nav {
     width: 304px;
     // position: absolute;
-    position: sticky;
-    top:0;
+    position: fixed;
+    // top:0;
     left: 0;
     // height: 100%;
     // min-height: $contentHeight;
@@ -45,6 +45,10 @@
       }
     }
 
+    &.isScrollBottom {
+      height: calc(100vh - 144px);
+    }
+
     &::-webkit-scrollbar {
       height: 4px;
       width: 4px;
@@ -64,5 +68,6 @@
     position: relative;
     -webkit-overflow-scrolling: touch;
     display: block;
+    margin-left: 304px;
   }
 }
