--- a/src/app/shared/table-of-contents/table-of-contents.scss
+++ b/src/app/shared/table-of-contents/table-of-contents.scss
@@ -2,8 +2,8 @@
   font-size: 13px;
   // Width is container width minus content width
   width: 19%;
-  position: sticky;
-  top: 1000;
+  // position: fixed;
+  // top: 1000;
   padding-left: 25px;
   box-sizing: border-box;
   display: inline-flex;
