--- a/src/assets/documents/components/designers.html
+++ b/src/assets/documents/components/designers.html
@@ -88,7 +88,7 @@
     </p>
   </div>
 
-  <img src="assets/img/doc/symbol_overrides.svg" height="504" width="684" class="docs-mt16" alt="">
+  <img src="assets/img/doc/symbol_overrides.png" height="504" width="684" class="docs-mt16" alt="">
 
   <div class="doc-divider"></div>
 
@@ -106,7 +106,7 @@
     </p>
   </div>
 
-  <img src="assets/img/doc/designers_color.svg" height="637" width="844" class="docs-mt16" alt="">
+  <img src="assets/img/doc/designers_color.png" height="637" width="844" class="docs-mt16" alt="">
 
   <div class="doc-desc-2">
     <p>
