--- a/src/assets/documents/components/typography.html
+++ b/src/assets/documents/components/typography.html
@@ -63,7 +63,7 @@
     short, important text or numerals.
   </div>
 
-  <img src="assets/img/headlines.svg" alt="" srcset="" height="300" width="800" class="docs-mb32">
+  <img src="assets/img/headlines.png" alt="" srcset="" height="300" width="800" class="docs-mb32">
 
 
   <div class="doc-title-3">
@@ -75,7 +75,7 @@
     sections of text, a serif or sans serif typeface is recommended.
   </div>
 
-  <img src="assets/img/body.svg" alt="" srcset="" height="300" width="800" class="docs-mb32">
+  <img src="assets/img/body.png" alt="" srcset="" height="300" width="800" class="docs-mb32">
 
   <div class="doc-title-3">
     Small Label
@@ -86,7 +86,7 @@
     a headline.
   </div>
 
-  <img src="assets/img/smalllabel.svg" alt="" srcset="" height="300" width="800">
+  <img src="assets/img/smalllabel.png" alt="" srcset="" height="300" width="800">
 
 
 
