--- a/src/app/pages/components/components.component.scss
+++ b/src/app/pages/components/components.component.scss
@@ -125,6 +125,9 @@
         }
       }
     }
+    &-item {
+      width: 100%;
+    }
     &-list-item {
       display: flex;
       align-items: center;
