--- a/src/document.scss
+++ b/src/document.scss
@@ -4,7 +4,8 @@ a {
 }
 .doc-category-title {
   /* Form Controls: */
-  font-family: SoletoTrial-Regular;
+  font-family: Soleto;
+  font-weight: 400;
   font-size: 12px;
   color: #9f9f9f;
   letter-spacing: 0.2px;
@@ -96,7 +97,8 @@ a {
   }
   th {
     /* Property: */
-    font-family: SoletoTrial-Bold;
+    font-family: Soleto;
+    font-weight: 700;
     font-size: 11px;
     color: #9f9f9f;
     letter-spacing: 1.65px;
@@ -121,7 +123,8 @@ a {
 }
 .doc-list-bold {
   // /* • Logical: Trees sho: */
-  font-family: SoletoTrial-Bold;
+  font-family: Soleto;
+  font-weight: 700;
   font-size: 16px;
   color: #696969;
   letter-spacing: 0;
