--- a/libs/style.scss
+++ b/libs/style.scss
@@ -649,6 +649,7 @@ mat-chip {
     display: none;
   }
   .mat-paginator-range-actions {
+    min-height: 0px;
     .mat-icon-button {
       line-height: 24px;
       height: 24px;
