Update colors documentation

--- a/src/assets/documents/components/colors.html
+++ b/src/assets/documents/components/colors.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title ">
     Foundation
-    <span class="docs-markdown-h3" id="contents">
+    <span class="docs-markdown-h3"
+          id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -22,13 +23,50 @@
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
-    Primary Colors
-    <span class="docs-markdown-h3" id="primary_colors">
-      <span header-link="examples"></span>Primary Colors</span>
+    Branding and Header, CTAs color
+    <span class="docs-markdown-h3"
+          id="primary_colors">
+      <span header-link="examples"></span>Branding and Header, CTAs color</span>
   </div>
 
   <div class="doc-desc-2">
-    A primary color is the color displayed most frequently across Vizient products&#x2019; screens and components. To create contrast
+    This is the color that represents Vizient. It is used for all Vizients headers and CTAs.
+  </div>
+
+  <div class="doc-color-container">
+    <div class="doc-color-block doc-color-border-top">
+      <div class="doc-color-background doc-color-orange doc-color-level1"></div>
+      <span class="doc-color-name">viz-orange</span>
+      <span class="doc-color-opacity">#FF4E00, 4%</span>
+    </div>
+    <div class="doc-color-block">
+      <div class="doc-color-background doc-color-orange doc-color-level2"></div>
+      <span class="doc-color-name">viz-orange</span>
+      <span class="doc-color-opacity">#FF4E00, 12%</span>
+    </div>
+    <div class="doc-color-block">
+      <div class="doc-color-background doc-color-orange doc-color-level3"></div>
+      <span class="doc-color-name">viz-orange</span>
+      <span class="doc-color-opacity">#FF4E00, 16%</span>
+    </div>
+    <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white">
+      <div class="doc-color-background doc-color-orange"></div>
+      <span class="doc-color-name">viz-orange</span>
+      <span class="doc-color-opacity">#FF4E00, 100%</span>
+    </div>
+  </div>
+
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Primary Color
+    <span class="docs-markdown-h3"
+          id="primary_colors">
+      <span header-link="examples"></span>Primary Color</span>
+  </div>
+
+  <div class="doc-desc-2">
+    A primary color is the color displayed most frequently across Vizient products’ screens and components. To create contrast
     between UI elements,you can use light or dark variants of your primary color on each elements.
   </div>
 
@@ -48,43 +86,23 @@
       <span class="doc-color-name">viz-purple</span>
       <span class="doc-color-opacity">#7F5EBA, 16%</span>
     </div>
-    <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white docs-mb24">
+    <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white">
       <div class="doc-color-background doc-color-purple"></div>
       <span class="doc-color-name">viz-purple</span>
       <span class="doc-color-opacity">#7F5EBA, 100%</span>
     </div>
   </div>
 
-  <div class="doc-color-container docs-ml24">
-    <div class="doc-color-block doc-color-border-top">
-      <div class="doc-color-background doc-color-orange doc-color-level1"></div>
-      <span class="doc-color-name">viz-orange</span>
-      <span class="doc-color-opacity">#FF4E00, 4%</span>
-    </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-orange doc-color-level2"></div>
-      <span class="doc-color-name">viz-orange</span>
-      <span class="doc-color-opacity">#FF4E00, 12%</span>
-    </div>
-    <div class="doc-color-block">
-      <div class="doc-color-background doc-color-orange doc-color-level3"></div>
-      <span class="doc-color-name">viz-orange</span>
-      <span class="doc-color-opacity">#FF4E00, 16%</span>
-    </div>
-    <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white docs-mb24">
-      <div class="doc-color-background doc-color-orange"></div>
-      <span class="doc-color-name">viz-orange</span>
-      <span class="doc-color-opacity">#FF4E00, 100%</span>
-    </div>
-  </div>
+
 
   <div class="doc-divider">
   </div>
 
   <div class="doc-title-2">
-    Secondary Colors
-    <span class="docs-markdown-h3" id="secondary_colors">
-      <span header-link="examples"></span>Secondary Colors</span>
+    Secondary (Accent) color
+    <span class="docs-markdown-h3"
+          id="secondary_colors">
+      <span header-link="examples"></span>Secondary (Accent) color</span>
   </div>
 
   <div class="doc-desc-2">
@@ -109,14 +127,27 @@
       <span class="doc-color-name">viz-blue</span>
       <span class="doc-color-opacity">#01ADAB, 16%</span>
     </div>
-    <div class="doc-color-primary doc-color-border-bottom docs-mb24">
+    <div class="doc-color-primary doc-color-border-bottom">
       <div class="doc-color-background doc-color-blue"></div>
       <span class="doc-color-name">viz-blue</span>
       <span class="doc-color-opacity">#01ADAB, 100%</span>
     </div>
   </div>
 
-  <div class="doc-color-container docs-ml24">
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Tertiary colors
+    <span class="docs-markdown-h3"
+          id="secondary_colors">
+      <span header-link="examples"></span>Tertiary colors</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Tertiary colors are used for data table statuses and texts.
+  </div>
+
+  <div class="doc-color-container">
     <div class="doc-color-block doc-color-border-top">
       <div class="doc-color-background doc-color-yellow doc-color-level1"></div>
       <span class="doc-color-name">viz-yellow</span>
@@ -139,7 +170,7 @@
     </div>
   </div>
 
-  <div class="doc-color-container">
+  <div class="doc-color-container docs-ml24">
     <div class="doc-color-block doc-color-border-top">
       <div class="doc-color-background doc-color-green doc-color-level1"></div>
       <span class="doc-color-name">viz-green</span>
@@ -162,7 +193,7 @@
     </div>
   </div>
 
-  <div class="doc-color-container docs-ml24">
+  <div class="doc-color-container">
     <div class="doc-color-block doc-color-border-top">
       <div class="doc-color-background doc-color-gray doc-color-level1"></div>
       <span class="doc-color-name">viz-gray</span>
@@ -178,14 +209,14 @@
       <span class="doc-color-name">viz-gray</span>
       <span class="doc-color-opacity">#696969, 16%</span>
     </div>
-    <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white docs-mb24">
+    <div class="doc-color-primary doc-color-border-bottom doc-color-text-color-white">
       <div class="doc-color-background doc-color-gray"></div>
       <span class="doc-color-name">viz-gray</span>
       <span class="doc-color-opacity">#696969, 100%</span>
     </div>
   </div>
 
-  <div class="doc-color-container">
+  <div class="doc-color-container docs-ml24">
     <div class="doc-color-block doc-color-border-top">
       <div class="doc-color-background doc-color-black doc-color-level1"></div>
       <span class="doc-color-name">viz-black</span>
@@ -214,9 +245,10 @@
   </div>
 
   <div class="doc-title-2">
-    Tertiary Colors
-    <span class="docs-markdown-h3" id="tertiary_colors">
-      <span header-link="props"></span>Tertiary Colors</span>
+    Charts and Graphs colors
+    <span class="docs-markdown-h3"
+          id="tertiary_colors">
+      <span header-link="props"></span>Charts and Graphs colors</span>
   </div>
 
   <div class="doc-desc-2">
@@ -265,7 +297,8 @@
 
   <div class="doc-title-2">
     Text Colors
-    <span class="docs-markdown-h3" id="text_colors">
+    <span class="docs-markdown-h3"
+          id="text_colors">
       <span header-link="props"></span>Text Colors</span>
   </div>
 
@@ -284,21 +317,22 @@
       <span>viz-gray</span>
       <span>#696969</span>
     </div>
-    <div class="doc-color-strip doc-color-dark-gray doc-color-text-color-white">
+    <!-- <div class="doc-color-strip doc-color-dark-gray doc-color-text-color-white">
       <span>viz-dark-gray</span>
       <span>#9F9F9F</span>
     </div>
     <div class="doc-color-strip doc-color-purple doc-color-text-color-white">
       <span>viz-purple</span>
       <span>#7F5EBA</span>
-    </div>
+    </div> -->
   </div>
 
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
     Background Colors
-    <span class="docs-markdown-h3" id="background_colors">
+    <span class="docs-markdown-h3"
+          id="background_colors">
       <span header-link="props"></span>Background Colors</span>
   </div>
 
@@ -330,7 +364,8 @@
 
   <div class="doc-title-2">
     Best Practice
-    <span class="docs-markdown-h3" id="best_practices">
+    <span class="docs-markdown-h3"
+          id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
@@ -338,8 +373,8 @@
     Colors should:
     <ul class="doc-list">
       <li>
-        Hierarchical: Color indicates which elements are interactive, how they relate to other elements, and their level of
-        prominence. Important elements should stand out the most.
+        Hierarchical: Color indicates which elements are interactive, how they relate to other elements, and their level of prominence.
+        Important elements should stand out the most.
       </li>
       <li>
         Legible: Text and important elements, like icons, should meet legibility standards when appearing on colored backgrounds,
