--- a/src/document.scss
+++ b/src/document.scss
@@ -277,6 +277,9 @@ a {
 .docs-mt16 {
   margin-top: 16px;
 }
+.docs-mb16 {
+  margin-bottom: 16px;
+}
 .doc-bold-title {
   font-size: 16px;
   font-weight: bold;
@@ -473,4 +476,16 @@ a {
       float: right;
     }
   }
+}
+.template-live-link {
+  color: #ffffff;
+  width: 150px;
+  height: 36px;
+  background-color: $viz-purple;
+  line-height: 36px;
+  font-size: 14px;
+  border-radius: 2px;
+  display: inline-block;
+  text-align: center;
+  font-weight: 300;
 }
