Fix bug : fix anchor id error

--- a/src/assets/documents/components/colors.html
+++ b/src/assets/documents/components/colors.html
@@ -25,8 +25,8 @@
   <div class="doc-title-2">
     Branding and Header, CTAs color
     <span class="docs-markdown-h3"
-          id="primary_colors">
-      <span header-link="examples"></span>Branding and Header, CTAs color</span>
+          id="branding_header">
+      <span header-link="branding_header"></span>Branding and Header, CTAs color</span>
   </div>
 
   <div class="doc-desc-2">
@@ -62,7 +62,7 @@
     Primary Color
     <span class="docs-markdown-h3"
           id="primary_colors">
-      <span header-link="examples"></span>Primary Color</span>
+      <span header-link="primary_colors"></span>Primary Color</span>
   </div>
 
   <div class="doc-desc-2">
@@ -102,7 +102,7 @@
     Secondary (Accent) color
     <span class="docs-markdown-h3"
           id="secondary_colors">
-      <span header-link="examples"></span>Secondary (Accent) color</span>
+      <span header-link="secondary_colors"></span>Secondary (Accent) color</span>
   </div>
 
   <div class="doc-desc-2">
@@ -139,8 +139,8 @@
   <div class="doc-title-2">
     Tertiary colors
     <span class="docs-markdown-h3"
-          id="secondary_colors">
-      <span header-link="examples"></span>Tertiary colors</span>
+          id="tertiary_colors">
+      <span header-link="tertiary_colors"></span>Tertiary colors</span>
   </div>
 
   <div class="doc-desc-2">
@@ -247,8 +247,8 @@
   <div class="doc-title-2">
     Charts and Graphs colors
     <span class="docs-markdown-h3"
-          id="tertiary_colors">
-      <span header-link="props"></span>Charts and Graphs colors</span>
+          id="chart_colors">
+      <span header-link="chart_colors"></span>Charts and Graphs colors</span>
   </div>
 
   <div class="doc-desc-2">
@@ -333,7 +333,7 @@
     Background Colors
     <span class="docs-markdown-h3"
           id="background_colors">
-      <span header-link="props"></span>Background Colors</span>
+      <span header-link="background_colors"></span>Background Colors</span>
   </div>
 
   <div class="doc-desc-2">
