--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -41,12 +41,12 @@
       <div app-docs-example="date-picker-basic"></div>
     </div>
 
-    <div class="doc-desc-2">
+    <!-- <div class="doc-desc-2">
       Datepicker input and change events
     </div>
     <div class="doc-example-container">
       <div app-docs-example="date-picker-event"></div>
-    </div>
+    </div> -->
   </div>
 
   <div class="doc-divider">
