--- a/src/assets/documents/components/select.html
+++ b/src/assets/documents/components/select.html
@@ -19,6 +19,7 @@
   </div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
