--- a/src/assets/documents/components/toolbar.html
+++ b/src/assets/documents/components/toolbar.html
@@ -17,7 +17,7 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <!-- <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span> -->
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
@@ -27,13 +27,13 @@
     <div app-docs-example="toolbar-basic"></div>
   </div>
 
-  <div id="exampleWrapper">
+  <!-- <div id="exampleWrapper">
     <div class="doc-desc-2">
       Use in forms to toggle the state of something on or off. </div>
     <div class="doc-example-container">
       <div app-docs-example="toolbar-color"></div>
     </div>
-  </div>
+  </div> -->
 
   <div class="doc-divider">
   </div>
