--- a/src/assets/documents/components/progressbar.html
+++ b/src/assets/documents/components/progressbar.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title ">
     Button &amp; Indicatiors
-    <span class="docs-markdown-h3" id="contents">
+    <span class="docs-markdown-h3"
+          id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -19,11 +20,12 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3" id="examples">
+    <span class="docs-markdown-h3"
+          id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Examples of badges containing text, using primary and secondary colors. The badge is applied to its children. </div>
+    The progress-bar supports four modes: determinate, indeterminate, buffer and query.</div>
   <div class="doc-example-container">
     <div app-docs-example="progress-bar-basic"></div>
   </div>
@@ -31,7 +33,8 @@
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props">
+    <span class="docs-markdown-h3"
+          id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -88,7 +91,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
+    <span class="docs-markdown-h3"
+          id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
@@ -111,7 +115,8 @@
 
   <div class="doc-title-2">
     Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
+    <span class="docs-markdown-h3"
+          id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
@@ -120,11 +125,15 @@
     but with 24% opacity. </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/progressbar-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center"
+         style="height:160px">
+      <img src="assets/img/doc/progressbar-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/progressbar-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center"
+         style="height:160px">
+      <img src="assets/img/doc/progressbar-dont.png"
+           alt="">
     </div>
   </div>
 
@@ -137,22 +146,28 @@
 
   <div class="doc-title-2">
     Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
+    <span class="docs-markdown-h3"
+          id="design_specs">
       <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/progressbar-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center"
+       style="height:280px">
+    <img src="assets/img/doc/progressbar-spec.png"
+         alt="">
   </div>
 
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
+    <span class="docs-markdown-h3"
+          id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  </div>
+  <a class="doc-download-link"
+     href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
