--- a/src/assets/documents/components/feedbackindicator.html
+++ b/src/assets/documents/components/feedbackindicator.html
@@ -129,7 +129,7 @@
 
 
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/feedbackindicator-spec.png" alt="">
+    <img src="assets/img/doc/feedbackindicator-spec.png" alt="" style="left: 50px;">
   </div>
 
   <div class="doc-divider"></div>
