--- a/src/assets/documents/components/dialog.html
+++ b/src/assets/documents/components/dialog.html
@@ -123,11 +123,11 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:712px">
-      <img src="assets/img/doc/dialog-title-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center-no-scale" style="height:712px">
+      <img src="assets/img/doc/dialog-title-do.png" alt="" style="width:508px;height:710px">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:712px">
-      <img src="assets/img/doc/dialog-title-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center-no-scale docs-mt16" style="height:712px">
+      <img src="assets/img/doc/dialog-title-dont.png" alt="" style="width:508px;height:710px">
     </div>
   </div>
 
@@ -137,11 +137,11 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:712px">
-      <img src="assets/img/doc/dialog-confirm-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center-no-scale" style="height:712px">
+      <img src="assets/img/doc/dialog-confirm-do.png" alt="" style="width:550px;height:710px;margin-left: 22px">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:712px">
-      <img src="assets/img/doc/dialog-confirm-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center-no-scale docs-mt16" style="height:712px">
+      <img src="assets/img/doc/dialog-confirm-dont.png" alt="" style="width:550px;height:710px;margin-left: 22px">
     </div>
   </div>
 
@@ -158,8 +158,8 @@
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:790px">
-    <img src="assets/img/doc/dialog-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center-no-scale" style="height:790px">
+    <img src="assets/img/doc/dialog-spec.png" alt="" style="width:522px;height:725px">
   </div>
 
   <div class="doc-divider"></div>
