--- a/src/document.scss
+++ b/src/document.scss
@@ -178,12 +178,13 @@ a {
     transform: scale(0.5);
   }
 }
-.docs-usage-center {
+.docs-usage-center-no-scale {
   position: relative;
   & > * {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%)
+    top: 50%;
+    transform: translate(-50%,-50%);
   }
 }
 .docs-usage-spec {
